// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Peers can be created/edited/deleted: can be created 1`] = `
Object {
  "data": Object {
    "createNewsroom": Object {
      "callToActionImage": null,
      "callToActionImageURL": null,
      "callToActionText": Array [],
      "callToActionURL": null,
      "hostURL": "https://host-url.ch/",
      "id": Any<String>,
      "isDisabled": false,
      "isSelf": false,
      "logo": null,
      "name": "Create Peer Test",
      "slug": Any<String>,
      "themeColor": "#000000",
      "themeFontColor": "#FFFFFF",
      "token": "testTokenABC123",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Peers can be created/edited/deleted: can be deleted 1`] = `
Object {
  "data": Object {
    "deleteNewsroom": Any<Object>,
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Peers can be created/edited/deleted: can be read by id 1`] = `
Object {
  "data": Object {
    "newsroom": Object {
      "callToActionImage": null,
      "callToActionImageURL": null,
      "callToActionText": Array [],
      "callToActionURL": null,
      "hostURL": "https://host-url.ch/",
      "id": Any<String>,
      "isDisabled": false,
      "isSelf": false,
      "logo": null,
      "name": "Create Peer Test",
      "slug": Any<String>,
      "themeColor": "#000000",
      "themeFontColor": "#FFFFFF",
      "token": "testTokenABC123",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Peers can be created/edited/deleted: can be updated 1`] = `
Object {
  "data": Object {
    "updateNewsroom": Object {
      "callToActionImage": null,
      "callToActionImageURL": null,
      "callToActionText": Array [],
      "callToActionURL": null,
      "hostURL": "https://new-host-url.ch/",
      "id": Any<String>,
      "isDisabled": false,
      "isSelf": false,
      "logo": null,
      "name": "Updated Peer",
      "slug": Any<String>,
      "themeColor": "#000000",
      "themeFontColor": "#FFFFFF",
      "token": "newTestTokenABC123",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Peers can be created/edited/deleted: can read peer profile 1`] = `
Object {
  "data": Object {
    "peerProfile": Object {
      "callToActionImage": null,
      "callToActionImageURL": null,
      "callToActionText": Array [],
      "callToActionURL": null,
      "id": Any<String>,
      "isSelf": true,
      "logo": null,
      "name": "Add your newsroom name here",
      "themeColor": "#000000",
      "themeFontColor": "#FFFFFF",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Peers can be created/edited/deleted: can update peer profile 1`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: 
Invalid \`prisma.newsroom.update()\` invocation:


  Foreign key constraint failed on the field: \`newsrooms_logoID_fkey (index)\`],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
